# land_cover_maps

./: .gitignore  README.md  image_procesing.py  join_row_data.sh  split_npy.py  view_frame.py
descargar_imagen/: download_data.py
model/: augment_utils.py  class_weights.json  compute_band_stats.py  compute_class_weights.py  config_training.py  data_loading.py  experiments_runner.py  image_processing.py  loss_functions.py  metrics.py  model.py  model_creation.py  model_try.py  routes.txt  samplers.py  visualization.py
split_images/: CMakeLists.txt  main.cpp
